--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -6,7 +6,14 @@
 <p [innerText]="allowNewServer"></p>
 <p>{{serverCreationStatus}}</p>
 <app-server></app-server>
-<hr><hr>
+<hr>
+<p *ngIf="serverCreated; else noServer">Server {{serverName}} has been created</p>
+<app-server *ngFor="let server of servers"></app-server>
+<ng-template #noServer>
+    <p> No server was created </p>
+</ng-template>
+
+
 <label>Username</label>
 <input type="text" class="form-control" [(ngModel)]="username" >
 <p>{{username}}</p>
@@ -14,5 +21,9 @@
 <p [innerText]="isAllowedToProvideUsername(username)"></p>
 <p>{{usernameStatus}}</p>
 <p></p>
+<hr>
+<!-- <button class="my-button"></button> -->
+
+
 
 
