Binding Components Task

--- a/src/app/binding-components-task/binding-components-task.component.html
+++ b/src/app/binding-components-task/binding-components-task.component.html
@@ -1,6 +1,6 @@
 
 <div class="panel panel-default" >
-    <div class="panel-heading"> Hi! How are You today?? Number of clicks:{{numberOfClicks}}
+    <div class="panel-heading"> How are You today?? Number of clicks:{{numberOfClicks}}
         <div class="panel-body">
             <button class="btn btn-success" (click)="onHavingGoodHumor()">good</button> 
             <button class="btn btn-primary" (click)="onHavingNormalHumor()">normal</button>
