--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,14 @@
 <div class="container">
   <div class="row">
    <div class="col-xs-12">
-    <h2>Jestem w AppComponent</h2>
-    <hr>
-    <app-servers></app-servers>
+    <!-- <h2>Jestem w AppComponent</h2>
+    <hr> -->
+    <!-- <app-servers></app-servers> -->
     <!-- <app-warning-alert></app-warning-alert> -->
     <!-- <app-success-alert></app-success-alert> -->
-    <app-button-task></app-button-task>
-    <app-binding-components-task *ngFor="let bElement of bindingElements" 
-    [bindingElement]="bElement"></app-binding-components-task>
+    <!-- <app-button-task></app-button-task> -->
+    <!-- <app-binding-components-task *ngFor="let bElement of bindingElements" 
+    [bindingElement]="bElement"></app-binding-components-task> -->
     <app-second-binding-components-task 
     (italicSubmitted)="onItalicFontSubmitted($event)"
     (boldSubmitted)="onBoldFontSubmitted($event)" ></app-second-binding-components-task>
@@ -16,7 +16,8 @@
     <div class="row">
       <div class="col-xs-12">
         <app-panel *ngFor="let nameProviderElement of nameProviders"
-        [element]="nameProviderElement"></app-panel>
+        [element]="nameProviderElement">
+      </app-panel>
       </div>
     </div>
    </div>
