--- a/src/app/second-binding-components-task/second-binding-components-task.component.html
+++ b/src/app/second-binding-components-task/second-binding-components-task.component.html
@@ -1,4 +1,5 @@
 <div class="containetr">
+    <h2>Binding components task</h2>
     <div class="row">
         <div class="col-xs-10">
             <div class="panel panel-default" style="width: 50%;">
@@ -11,8 +12,9 @@
                     <div class="panel-heading">
                         <form>
                             <h4>In which color do You want to write your name?</h4>
-                            <mat-form-field>
+                            <mat-form-field> 
                               <select matNativeControl [(ngModel)]="selectedColor" name="color">
+                                
                                 <option value="" selected></option>
                                 <option *ngFor="let color of colors" [color]="color.value">
                                     {{color.viewValue}}
@@ -28,8 +30,6 @@
                     <h2 [style.color]="selectedColor"> {{yourName}}</h2>
                 <button class="btn btn-warning" (click)="onSubmitItalic(yourName,selectedColor )">Submit Italic</button>
                 <button class="btn btn-warning" (click)="onSubmitBold(yourName,selectedColor)">Submit Bold</button>
-
-
                  </h4>
                 </div>
             </div>
